Dashboard spacing fixed

--- a/client/src/pages/DashboardPage.scss
+++ b/client/src/pages/DashboardPage.scss
@@ -34,6 +34,7 @@ $wolfIMG: "../img/wolf.png";
         height: 40%;
         width: 100%;
         background-color: rgb(0, 138, 138);
+        margin-top: 30px;
         border-radius: 145px;
         font-size: 80px;
         color: white;
